# wasm

./: .gitignore  Cargo.toml  README.md  UPLOAD_INSTRUCTIONS.md  VERIFICATION.md  VERIFICATION_INFO.md  build.sh  deploy.sh  upload.sh
.cargo/: config.toml
artifacts/: checksums.txt  simple_counter.wasm
src/: lib.rs
