[package]
name = "simple-counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "3.0"
cosmwasm-schema = "3.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "3.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
